btn spacing fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,8 +40,11 @@
  * 6.1 Posts and Pages
  * ----------------------------------------------------------------------------
  */
+.contact-me a{
+  margin-top: 40px;
+}
 
- .highlight a {
+.highlight a {
   background-color: $yellow;
  }
 
